--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3"
 services:
   myapp:
-    image: dashboardi2e
+    build: .
     ports:
-      - "80:80"
+      - "8080:8080"
     volumes:
       - ./src:/wd/src
     environment:
-      - PORT=80
-    command: gunicorn --workers=5 --threads=1 -b 0.0.0.0:80 main:server
+      - PORT=8080
+    command: gunicorn --workers=5 --threads=1 -b 0.0.0.0:8080 app:server
