--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.6
 contourpy==1.0.6
 cycler==0.11.0
 dash==2.7.1
+dash-bootstrap-components==1.3.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
@@ -17,6 +18,7 @@ Fiona==1.8.22
 Flask==2.2.2
 fonttools==4.38.0
 geopandas==0.3.0
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.4
@@ -36,13 +38,10 @@ pyparsing==3.0.9
 pyproj==3.4.1
 pyshp==1.2.10
 python-dateutil==2.8.2
+python-dotenv==0.21.1
 pytz==2022.7
 shapely==2.0.0
 six==1.16.0
 tenacity==8.1.0
 tomli==2.0.1
 Werkzeug==2.2.2
-gunicorn==20.1.0
-
-
-
