--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -15,13 +15,18 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
+    - name: Docker install
+      run:  |
+        sudo apt install docker
     - name: Setup Docker Compose
       run: |
-        sudo apt-get update
-        sudo apt-get -y install curl
+        sudo dnf update
+        sudo dnf -y install curl
         sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
+    - name: Load Data 
+      run: |
+        chmod +x init.sh && ./init.sh
 
     - name: Deploy with Docker Compose
       run: |
