--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
         - uses: actions/checkout@v2
         - name: Build the stack
