--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - name: Build the stack
-          run: docker-compose up -d
+          run: docker compose up -d
         
