--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -14,5 +14,6 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - name: Build the stack
-          run: sudo docker-compose build && sudo docker-compose up -d
-            
+          run: 
+            sudo docker-compose build 
+            sudo docker-compose up -d 
