--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -13,7 +13,9 @@ jobs:
     runs-on: self-hosted
     steps:
         - uses: actions/checkout@v2
-        - name: Build the stack
+        - name: Build 
           run: 
             sudo docker-compose build 
-            sudo docker-compose up -d 
+        - name: UpCompose
+          run: docker-compose up -d
+ 
