--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: self-hosted
     steps:
         - uses: actions/checkout@v2
+        - name: Install Docker Compose
+          run: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
         - name: Build 
           run: 
             sudo docker-compose build 
