--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -17,9 +17,12 @@ jobs:
           run: |
             sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
+        - name: Fix Path
+          run: |
+            sudo echo "export PATH=$PATH:/usr/local/bin" >> ~/.bashrc
+            source ~/.bashrc
         - name: Build 
           run: 
             sudo docker-compose build 
         - name: UpCompose
           run: docker-compose up -d
- 
