--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -7,7 +7,7 @@ on:
       - master
 
 env:
-  DOCKER_COMPOSE_VERSION: 2.16.0
+  DOCKER_COMPOSE_VERSION: 2.15.1
 
 jobs:
   deploy:
@@ -16,7 +16,7 @@ jobs:
         - uses: actions/checkout@v2
         - name: Install Docker Compose
           run: |
-            sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.15.0/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
         - name: Fix Path
           run: |
