--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -15,6 +15,8 @@ jobs:
         - name: Install Docker Compose
           run: |
             sudo curl -L "https://github.com/docker/compose/releases/download/v2.15.0/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
+            sudo echo "export PATH=$PATH:/usr/local/bin" >> ~/.bashrc
+            source ~/.bashrc
             sudo chmod +x /usr/local/bin/docker-compose
         - name: Fix Path
           run: |
