--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,10 @@ jobs:
             sudo echo "export PATH=$PATH:/usr/local/bin" >> ~/.bashrc
             source ~/.bashrc
             sudo chmod +x /usr/local/bin/docker-compose
+        - name: Run Init Script
+          run: |
+            docker run --interactive --tty --rm --volume=$(pwd)/neo4j/data:/data  --volume=$(pwd)/neo4j/backups:/backups  neo4j/neo4j-admin:5.4.0 neo4j-admin database load neo4j --from-path=/backups --overwrite-destination
+
         - name: Fix Path
           run: |
             sudo echo "export PATH=$PATH:/usr/local/bin" >> ~/.bashrc
