--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,10 @@ __pycache__/
 build/
 dist/
 eggs/
-.env
+ .env
 .venv
 neo4j/
 neo4j/data/
 neo4j/logs/
-/neo4j/data/
+/neo4j/data/databases/
+.env/
