--- a/docker-composeNeo.yml
+++ b/docker-composeNeo.yml
@@ -12,15 +12,8 @@ services:
       - ./neo4j/data:/data
       - ./logs:/logs
       environment:
-      - NEO4J_dbms_memory_pagecache_size=1G
-      - NEO4J_dbms.memory.heap.initial_size=1G
-      - NEO4J_dbms_memory_heap_max__size=1G
       - NEO4J_AUTH=neo4j/password
-      networks:
-      - neo4j_net
+      
 volumes:
     neo4j_data:
-    neo4j_import:
-networks:
-    neo4j_net:
-      driver: bridge
+    neo4j_logs:
