--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 attrs==22.2.0
 autopep8==2.0.1
+black==23.1.0
 certifi==2022.12.7
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.6
+colorlover==0.3.0
 contourpy==1.0.6
 cycler==0.11.0
 dash==2.7.1
@@ -25,12 +27,15 @@ kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 munch==2.5.0
+mypy-extensions==1.0.0
 neo4j==5.3.0
 numpy==1.24.1
 openpyxl==3.0.10
 packaging==22.0
 pandas==1.5.2
+pathspec==0.11.1
 Pillow==9.4.0
+platformdirs==3.1.1
 plotly==5.11.0
 plotly-geo==1.0.0
 pycodestyle==2.10.0
