--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 USERNAME=neo4j
-PASSWORD=password
-URL=bolt://127.0.0.1:7687
+PASSWORD=i2c_@2lletas_09!
+URL=bolt://10.210.20.51:30008
 NEO4J_VERSION=5.3.0
