--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+ansi2html==1.8.0
 attrs==22.2.0
 autopep8==2.0.1
 black==23.1.0
+Brotli==1.0.9
+cachelib==0.9.0
 certifi==2022.12.7
+charset-normalizer==3.2.0
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
@@ -9,26 +13,36 @@ colorama==0.4.6
 colorlover==0.3.0
 contourpy==1.0.6
 cycler==0.11.0
-dash==2.7.1
+dash==2.11.1
 dash-bootstrap-components==1.3.1
 dash-core-components==2.0.0
+dash-extensions==0.0.65
 dash-html-components==2.0.0
+dash-leaflet==0.1.23
 dash-table==5.0.0
 descartes==1.1.0
+EditorConfig==0.12.3
 et-xmlfile==1.1.0
 Fiona==1.8.22
 Flask==2.2.2
+Flask-Caching==2.0.2
+Flask-Compress==1.13
 fonttools==4.38.0
+geobuf==1.1.1
 geopandas==0.3.0
 gunicorn==20.1.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsbeautifier==1.14.9
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
+more-itertools==9.1.0
 munch==2.5.0
 mypy-extensions==1.0.0
 neo4j==5.3.0
+nest-asyncio==1.5.6
 numpy==1.24.1
 openpyxl==3.0.10
 packaging==22.0
@@ -38,6 +52,7 @@ Pillow==9.4.0
 platformdirs==3.1.1
 plotly==5.11.0
 plotly-geo==1.0.0
+protobuf==3.20.0
 pycodestyle==2.10.0
 pyparsing==3.0.9
 pyproj==3.4.1
@@ -45,8 +60,12 @@ pyshp==1.2.10
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 pytz==2022.7
+requests==2.31.0
+retrying==1.3.4
 shapely==2.0.0
 six==1.16.0
 tenacity==8.1.0
 tomli==2.0.1
-Werkzeug==2.2.2
+typing_extensions==4.7.1
+urllib3==2.0.4
+Werkzeug==2.2.3
